--- a/ecommerceou/src/main/resources/templates/mail.html
+++ b/ecommerceou/src/main/resources/templates/mail.html
@@ -334,7 +334,7 @@
                         <table role="presentation" border="0" cellpadding="0" cellspacing="0" width="100%">
                             <tr>
                                 <td class="logo" style="text-align: left;">
-                                    <h1><a href="#">OU ecommerce</a></h1>
+                                    <h1><a href="#">Open Market</a></h1>
                                 </td>
                             </tr>
                         </table>
